embed component added

--- a/app/globals.css
+++ b/app/globals.css
@@ -250,7 +250,8 @@ a {
 
 [data-theme='dark'] .menu-label,
 [data-theme='dark'] .close-menu,
-[data-theme='dark'] .toc-link {
+[data-theme='dark'] .toc-link,
+[data-theme='dark'] .nav-title {
   color: #f9fafb;
 }
 
